# outerspace-apizr

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: template-bug-report.md  template-feature-request.md  template-hotfix-report.md  template-user-story.md
.github/workflows/: mkdocs.yaml
about/CODE_OF_CONDUCT/: index.html
about/CONTRIBUTING/: index.html
about/LICENSE/: index.html
apis/apizr-api/: index.html
apis/code-analyzr-api/: index.html
apis/dockerizr-api/: index.html
apis/fast-apizr-api/: index.html
apis/notebook-transformr-api/: index.html
assets/javascripts/: custom.785bde5b.min.js  iconsearch_index.json
assets/stylesheets/: extra.css
docs/: CNAME  index.md
docs/about/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md
docs/apis/: apizr-api.md  code-analyzr-api.md  dockerizr-api.md  fast-apizr-api.md  notebook-transformr-api.md
docs/assets/stylesheets/: extra.css
docs/getting-started/: introduction.md
docs/getting-started/developer-guide/: setup.md
docs/getting-started/user-guide/: apizr.md  code-analyzr.md  dockerizr.md  fast-apizr.md
docs/modules/: code-analyzr.md  dockerizr.md  fast-apizr.md  notebook-transformr.md
getting-started/developer-guide/setup/: index.html
getting-started/introduction/: index.html
getting-started/user-guide/apizr/: index.html
getting-started/user-guide/code-analyzr/: index.html
getting-started/user-guide/dockerizr/: index.html
getting-started/user-guide/fast-apizr/: index.html
modules/code-analyzr/: index.html
modules/dockerizr/: index.html
modules/fast-apizr/: index.html
modules/notebook-transformr/: index.html
overrides/: home.html  main.html
overrides/assets/javascripts/: custom.785bde5b.min.js.map
search/: search_index.json
src/: app.py  configuration.py  configuration.yaml  exceptions.py  main.py  prompt.py  requirements.txt
src/code-analyzr/: main.py
src/code_analyzr/: app.py  configuration.py  main.py  prompt.py  requirements.txt
src/dockerizr/: app.py  configuration.py  main.py  prompt.py  requirements.txt
src/extensions/: context.py  engine.py  step.py
src/fast-apizr/: app.py  main.py
src/fast_apizr/: app.py  main.py  prompt.py  requirements.txt
src/notebook-transformr/: app.py  requirements.txt
src/notebook_transformr/: app.py  requirements.txt
test/code-analyzr-3.10/: astAnalyzrTest.py
test/code-analyzr-3.11/: astAnalyzrTest.py
test/code-analyzr-3.8/: astAnalyzrTest.py
test/code-analyzr-3.9/: astAnalyzrTest.py
test/fast-apizr/: fastApiAppGeneratorTest.py
test/notebook-transformr/: notebookTransformrTest.py
test/notebook_transformr/: notebookTransformrTest.py
(+157 files in other folders)
