[tool.poetry]
name = "outerspace-apizr"
version = "0.1.3.2"
description = "Apizr is a dynamic API generator built on top of FastAPI. It analyses your Python codebase, extracts relevant metadata, and automatically generates a FastAPI backend for your application. This simplifies the process of API development, saving time, and reducing the chance of errors."
authors = [
  "Ludovic FERNANDEZ <ludovic.fernandez@alien6.com>",
  "Oussama HADJ AISSA <oussama.h.aissa@alien6.com>",
]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nbconvert = "*"
pipreqs = "*"
ipython = "*"
black = "*"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
uvicorn = { version = "*", extras = ["standard"] }
Jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
PyYAML = "^6.0.1"
PyInquirer = "^1.0.3"

[[tool.poetry.packages]]
include = "src/*"

[tool.poetry.scripts]
apizr = "src.main:main"

[tool.poetry.urls]
"Repository" = "https://github.com/Alien6-Studio/outerspace-apizr"
"Website" = "https://apizr.outerspace.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["F401", "E501", "E402"]
